# dev

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  overview.md
.claude/: settings.json  settings.local.json
.claude/commands/: breakdown.md  commit.md  fix-issue.md  pr.md  review.md  scaffold.md  security-scan.md  spec.md  squash-pr.md  work.md
.github/: dependabot.yml
.github/workflows/: rust.yml
crates/apple-container/: Cargo.toml  build.rs
crates/apple-container/proto/: builder.proto
crates/apple-container/src/: build.rs  content.rs  error.rs  fssync.rs  lib.rs  models.rs  routes.rs
crates/apple-container/src/xpc/: connection.rs  ffi.rs  message.rs  mod.rs
crates/buildkit-client-patch/: Cargo.toml  Cargo.toml.orig  README.md  build.rs
crates/buildkit-client-patch/benches/: build_bench.rs
crates/buildkit-client-patch/docs/: README.md
crates/buildkit-client-patch/examples/: explore_api.rs
crates/buildkit-client-patch/examples/multi-stage/: Dockerfile
crates/buildkit-client-patch/examples/test-dockerfile/: Dockerfile
crates/buildkit-client-patch/src/: builder.rs  client.rs  error.rs  lib.rs  main.rs  progress.rs  proto.rs  solve.rs
crates/buildkit-client-patch/src/session/: auth.rs  filesync.rs  grpc_tunnel.rs  mod.rs  secrets.rs
crates/buildkit-client-patch/tests/: builder_test.rs  dfs_order_test.rs  integration_test.rs  minimal_context_test.rs  progress_test.rs  proto_test.rs  session_test.rs  single_file_test.rs
crates/buildkit-client-patch/tests/common/: mod.rs
src/: caddy.rs  cli.rs  error.rs  lib.rs  main.rs
src/collection/: cache.rs  index.rs  mod.rs
src/commands/: base.rs  build.rs  config.rs  down.rs  exec.rs  forward.rs  global.rs  init.rs  list.rs  mod.rs  new.rs  open.rs  shell.rs  status.rs  up.rs  vscode.rs
src/devcontainer/: compose.rs  config.rs  effective.rs  features.rs  jsonc.rs  lifecycle.rs  lockfile.rs  merge.rs  mod.rs  recipe.rs  run_args.rs  templates.rs  uid.rs  variables.rs
src/oci/: artifact.rs  auth.rs  mod.rs  registry.rs
src/runtime/: apple.rs  compose.rs  docker.rs  mod.rs  podman.rs
src/tui/: mod.rs  picker.rs  prompts.rs
src/util/: mod.rs  naming.rs  paths.rs  workspace.rs
tests/: down_test.rs
