[workspace]
members = [".", "crates/apple-container"]

[package]
name = "devcontainer"
version = "0.1.9"
edition = "2024"
description = "A devcontainer management CLI"
license = "MIT"
repository = "https://github.com/squirrelsoft-dev/dev"
keywords = ["devcontainer", "docker", "container", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Container runtime
bollard = { version = "0.20", features = ["buildkit", "chrono"] }

# OCI registry
oci-client = "0.14"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json_comments = "0.2"

# TUI
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"

# Archive
flate2 = "1"
tar = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Async streams
futures-util = "0.3"

# Byte buffers
bytes = "1"

# Platform
libc = "0.2"

# Pipes
os_pipe = "1"

# Utility
dirs = "6"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# Apple Containers (native XPC) — build from source with --features apple
apple-container = { version = "0.1.0", path = "crates/apple-container", optional = true }

[features]
apple = ["apple-container"]

[dev-dependencies]
tempfile = "3"
