[package]
name = "apple-container"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "net", "io-util", "time"] }
thiserror = "2"
libc = "0.2"
os_pipe = "1"

# gRPC (for native image builds over vsock)
tonic = "0.12"
prost = "0.13"
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

# OCI registry client (for image resolution during builds)
oci-client = "0.14"

[build-dependencies]
tonic-build = "0.12"
