[package]
name = "apple-container"
version = "0.1.0"
edition = "2024"
description = "Rust client for Apple Containers via XPC"
license = "MIT"
repository = "https://github.com/squirrelsoft-dev/dev"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "net", "io-util", "time"] }
thiserror = "2"
libc = "0.2"
os_pipe = "1"

# gRPC (for native image builds over vsock)
tonic = "0.12"
prost = "0.13"
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

# OCI registry client (for image resolution during builds)
oci-client = "0.14"

# Build context transfer: the builder shim receives the context as a tar
# archive keyed by a content checksum.
tar = "0.4"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
# `start_paused` lets the build-stream deadline tests spend the full idle
# budget without waiting it out in real time.
tokio = { version = "1", features = ["test-util"] }
